test_case/rust-lang_rust/53748_416404317_86.rs
compile_fail,E0404\nstruct Foo;\n\nfn bar<T: Foo>(t: T) {} // error: `Foo` is not a trait\n